# cloudkit.service

./: README.md  pyproject.toml
src/ansible_collections/cloudkit/service/playbooks/: testplaybook.yaml
src/ansible_collections/cloudkit/service/plugins/filter/: json_pointer_escape.py
src/ansible_collections/cloudkit/service/roles/testrole/tasks/: main.yaml
